<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no_image"
            android:contentDescription="@string/fotoProfessorDesc"/>

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome" />
        <EditText
            android:id="@+id/edNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nomeProfessorHint">
            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/tvFone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone" />
        <EditText
            android:id="@+id/edFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/foneProfessorHiht"/>

        <TextView
            android:id="@+id/tvSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site" />
        <EditText
            android:id="@+id/edSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/siteHint"
            android:ems="10" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"/>

        <TextView
            android:id="@+id/tvEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco" />
        <EditText
            android:id="@+id/edEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/enderecoHint"/>
        <Button
            android:id="@+id/sbSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvarDados" />
    </LinearLayout>
</ScrollView>